Fixed navigation overlap with home section title

--- a/style.css
+++ b/style.css
@@ -125,6 +125,7 @@ section {
   align-items: center;
   justify-content: center;
   gap: 15rem;
+  padding-top: 15rem;
 }
 
 .home-content {
@@ -132,6 +133,7 @@ section {
   flex-direction: column;
   align-items: flex-end;
   text-align: right;
+  padding-top: 3rem;
 }
 
 .home-content h1 {
@@ -520,6 +522,7 @@ section {
     flex-direction: column-reverse;
     margin: 5rem 0;
     gap: 5rem;
+    padding-top: 18rem;
   }
   .home-content {
     align-items: center;
